<resources>
    <string name="app_name">연애의 시작은 영화처럼</string>
    <string name="action_settings">설정</string>

    <string name="loading">Loading…</string>

    <!-- Account fragment list -->
    <string name="my_profile">프로필</string>
    <string name="movie_ticket_box">영화티켓함</string>
    <string name="coupon_box">쿠폰함</string>
    <string name="notice">공지사항</string>
    <string name="FAQ">자주묻는질문</string>
    <string name="Ask">문의하기</string>
    <string name="logout">로그아웃</string>

    <string name="title_activity_first_setting">@string/app_name</string>

    <!-- Strings related to login -->
    <string name="prompt_school">대학</string>
    <string name="prompt_work">직업</string>
    <string name="prompt_height">신장</string>
    <string name="prompt_fav_movie">인생영화</string>
    <string name="action_account_profile_submit">"제  출"</string>
    <string name="action_submit_short">Submit</string>
    <string name="prompt_name">이름</string>
    <string name="birthday_text">생년월일</string>
    <string name="gender_text">성별</string>
    <string name="prompt_introduce">자기소개</string>
    <string name="photo_required">얼굴이 나온 사진을 올려 주세요</string>
    <string name="gender_required">성별을 입력해 주세요</string>
    <string name="movie_required">영화 한편을 입력해 주세요</string>
    <string name="name_required">이름을 입력해 주세요</string>
    <string name="school_required">학교를 입력해 주세요</string>
    <string name="work_required">직업(학생)을 입력해 주세요</string>
    <string name="height_required">신장을 입력해 주세요</string>
    <string name="filled_account_info">filled_account_info</string>
    <string name="select_file">Select File</string>
    <string name="profile_photo">프로필 사진</string>

    <string-array name="gender">
        <item></item>
        <item>남성</item>
        <item>여성</item>
    </string-array>

    <string-array name="choose_photo_resource">
        <item>갤러리에서 선택</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enroll_button_text">참가하기</string>
    <string name="enrolled_button_text">참가 진행 중</string>
    <string name="preference_age_range_text">선호 연령대</string>
    <string name="apply_success_text">신청되었습니다. 새 인연을 매일 정오에 최대 3명 또는 당신에게 호감을 나타낼 때 보내드립니다.</string>
    <string name="release_success_text">신청 해제 되었습니다.</string>
    <string name="search_mate_condition">인연 찾기 설정</string>

    <string name="pref_date">일자(중복가능)</string>
    <string name="pref_movie">영화(중복가능)</string>
    <string name="like_each_other">서로간 좋아요 (12시간 후 사라짐)</string>
    <string name="match_progress">매칭 진행 (12시간 후 사라짐)</string>
    <string name="match_complete">매칭 완료</string>

    <string-array name="day_of_week">
        <item></item>
        <item>(일)</item>
        <item>(월)</item>
        <item>(화)</item>
        <item>(수)</item>
        <item>(목)</item>
        <item>(금)</item>
        <item>(토)</item>
    </string-array>

    <string-array name="info_contents">
        <item>서로 12시간 이내 결제시 대화방 및 영화티켓이 자동 생성됩니다.</item>
        <item>12시간 이내 결제하지 않을 경우 서로간 좋아요 목록은 사라지게 됩니다.</item>
        <item>결제 후 이성이 결제하지 않을 시 12시간 후 결제금액은 크레딧으로 자동 환불됩니다.</item>
    </string-array>

    <string-array name="my_profile_list">
        <item>이름</item>
        <item>나이</item>
        <item>키</item>
        <item>학교</item>
        <item>직업</item>
        <item>인생 영화</item>
    </string-array>

    <string-array name="movie_info_list">
        <item>티켓번호</item>
        <item>사용기한</item>
        <item>사용극장</item>
        <item>주의사항</item>
        <item>사용방법</item>
        <item>건네주기</item>
    </string-array>

    <string-array name="opponent_profile_list">
        <item>매칭 영화 정보</item>
        <item>영화</item>
        <item>일자</item>
        <item>상대방 정보</item>
        <item>이름</item>
        <item>나이</item>
        <item>키</item>
        <item>학교</item>
        <item>직업</item>
        <item>인생 영화</item>
        <item>정확한 시간 및 장소: 매칭 후 상대방과 결정</item>
    </string-array>

    <string name="info_before_payment">결제 전 정보</string>
    <string name="payment_title">비용 결제하기</string>
    <string name="request_check_payment">입금확인요청</string>
    <string name="request_check_payment_description">입금확인 요청이 성공적으로 완료되어\n확인 후 크레딧이 충전될 예정입니다</string>
    <string name="won">원</string>
    <string name="title_activity_chat">대화</string>
    <string name="title_activity_ticket_box1">영화티켓함</string>
    <string name="movie_ticket_peel">- 꼭 서로간 매칭완료 후 영화 예매시 사용해야해요 \n - 확인한다면 재매칭 및 환불은 불가합니다</string>
    <string name="title_activity_profile_prop_edit">ProfilePropEditActivity</string>
    <string name="terms"><u>이용약관</u></string>
    <string name="privacy"><u>개인정보보호</u></string>
    <string name="enroll_location_warning_message">현재 서울 지역에서만 서비스 중이며, 정확한 상영관 및 시간은 매칭 후 이성과 상의하세요</string>
    <string name="terms_privacy_agree_request">이용약관 및 개인정보보호에 동의해주세요.</string>
    <string name="ask_ticket_send">이성에게 영화티켓을 건네주시겠나요?</string>
    <string name="ticket_check_label_1">1. 연시영 1회 영화티켓</string>
    <string name="ticket_check_label_2">2. 연시영 1회 영화티켓</string>
    <string name="request_finding_opponent_setting">연인 찾기 조건을 설정해 주세요</string>
    <string name="propose_information">새 인연을 매일 정오에 최대 3명 또는\n당신에게 호감을 나타낼 때 보내드립니다.\n새 인연이 계속 나타나지 않을 시\n인연 찾기 설정을 수정해주세요</string>
    <string name="title_activity_photo_editor">사진편집</string>
    <string name="title_activity_notice">공지사항</string>

</resources>
