<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moviting.android.ui.activity.FirstSettingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginBottom="1dp">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile_placeholder"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFFFF"/>
            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_camera_enhance_black_24dp"
                android:scaleType="centerCrop"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/image_layout"
            android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/account_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#ff000000"
            android:text="Name"
            android:textSize="15sp"/>
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/edit_pencil"
                android:id="@+id/account_name_edit_button"
                android:scaleType="centerCrop"
                android:layout_toRightOf="@id/account_profile_name"
                android:background="@android:color/transparent"/>
        </RelativeLayout>

    </RelativeLayout>

    <!-- Setting progress -->
    <ProgressBar
        android:id="@+id/account_setting_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/account_setting_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:layout_weight="1" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/birthday"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_school"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_work"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_height"
                    android:imeActionId="@integer/submit_action_id"
                    android:imeActionLabel="@string/action_submit_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/account_setting_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_account_profile_submit"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
